force-app/main/default/objects/Invoice_Milestone__c/fields/Anno__c.field-meta.xml
<CustomField>
    <fullName>Anno__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
    <description>Anno della fattura.</description>
    <label>Anno</label>
    <length>4</length>
    <type>Text</type>
</CustomField>