force-app/main/default/objects/Invoice_Milestone__c/fields/Codice_Fattura_Esterno__c.field-meta.xml
<CustomField>
    <fullName>Codice_Fattura_Esterno__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Inserire il codice della fattura presente sul sistema di fatturazione aziendale</inlineHelpText>
    <label>Codice Fattura Esterno</label>
    <length>25</length>
    <type>Text</type>
</CustomField>