force-app/main/default/objects/Invoice_Milestone__c/fields/Data_prevista__c.field-meta.xml
<CustomField>
    <fullName>Data_prevista__c</fullName>
    <label>Data prevista</label>
    <required>true</required>
    <type>Date</type>
</CustomField>