force-app/main/default/objects/Invoice_Milestone__c/fields/Id_Fatture_In_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Id_Fatture_In_Cloud__c</fullName>
    <label>Id Fatture In Cloud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>