force-app/main/default/objects/Invoice_Milestone__c/fields/Last_Fetch_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Fetch_Time__c</fullName>
    <label>Last Fetch Time</label>
    <type>DateTime</type>
</CustomField>