force-app/main/default/objects/Invoice_Milestone__c/fields/startSendEmailWorkflow__c.field-meta.xml
<CustomField>
    <fullName>startSendEmailWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>startSendEmailWorkflow</label>
    <type>Checkbox</type>
</CustomField>