force-app/main/default/objects/Invoice_Milestone__c/recordTypes/One_Shot.recordType-meta.xml
<RecordType>
    <fullName>One_Shot</fullName>
    <active>true</active>
    <label>One Shot</label>
</RecordType>