force-app/main/default/objects/Invoice_Milestone__c/recordTypes/Recursive.recordType-meta.xml
<RecordType>
    <fullName>Recursive</fullName>
    <active>true</active>
    <label>Recursive</label>
</RecordType>