force-app/main/default/objects/Invoice_Milestone__c/validationRules/Block_Change_From_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Change_From_Draft</fullName>
    <active>false</active>
    <description>Impedisce il passaggio di stato da Draft a Fattura Inviata o Fattura Pagata.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( PRIORVALUE(Stato__c), &apos;Draft&apos;),
 OR(
  ISPICKVAL( Stato__c, &apos;Fattura Pagata&apos;),
  ISPICKVAL( Stato__c, &apos;Fattura Inviata&apos;)
 )
)</errorConditionFormula>
    <errorDisplayField>Stato__c</errorDisplayField>
    <errorMessage>Compilare i campi necessari e selezionare lo stato &quot;Da Fatturare&quot;.</errorMessage>
</ValidationRule>