force-app/main/default/objects/Invoice_Milestone__c/validationRules/Block_Status_Change_From_FatturaPagata.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Status_Change_From_FatturaPagata</fullName>
    <active>false</active>
    <description>Impedisce di tornare ad uno stato precedente una volta che il record si trova in &quot;Fattura Pagata&quot;.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( PRIORVALUE(Stato__c), &apos;Fattura Pagata&apos;),
 OR(
  ISPICKVAL( Stato__c, &apos;Fattura Inviata&apos;),
  ISPICKVAL( Stato__c, &apos;Da Fatturare&apos;),
  ISPICKVAL( Stato__c, &apos;Draft&apos;)
 )
)</errorConditionFormula>
    <errorDisplayField>Stato__c</errorDisplayField>
    <errorMessage>Impossibile tornare ad uno stato precedente.</errorMessage>
</ValidationRule>