force-app/main/default/objects/Invoice_Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ammontare__c</columns>
    <columns>Anno__c</columns>
    <columns>Codice_Fattura_Esterno__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stato__c</columns>
    <columns>Data_prevista__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>